crates/tiler-ir/tests/typed-handles/fail/private_authority_limits.rs
use tiler_ir::semantic::{
    MAX_SEMANTIC_AUTHORITY_CLOSURE_ITEMS, MAX_SEMANTIC_AUTHORITY_ROOT_ITEMS,
};

fn main() {}
